--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lms",
   "private": true,
   "version": "0.0.0",
+  "proxy":"http://localhost:5000",
   "type": "module",
   "scripts": {
     "dev": "vite",
